[gd_scene load_steps=4 format=3 uid="uid://c38ndyjglf53l"]

[ext_resource type="Script" path="res://scenes/game/map/ui/map_ui.gd" id="1_76ax2"]
[ext_resource type="Shader" path="res://scenes/game/map/ui/map_ui.gdshader" id="2_3do81"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6eksf"]
shader = ExtResource("2_3do81")
shader_parameter/amount = 3.0

[node name="MapUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_76ax2")

[node name="GUI" type="Control" parent="."]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="MainMenuButton" type="Button" parent="GUI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="VBoxContainer2" type="VBoxContainer" parent="GUI/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="CharactersButton" type="Button" parent="GUI/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Characters"

[node name="DeckButtons" type="Button" parent="GUI/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Decks"

[node name="PauseMenu" type="Control" parent="."]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlurredBackground" type="ColorRect" parent="PauseMenu"]
material = SubResource("ShaderMaterial_6eksf")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="CloseMenuButton" type="Button" parent="PauseMenu/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "X"

[node name="VBoxContainer2" type="VBoxContainer" parent="PauseMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="SaveAndLeave" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(260, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Save & Leave"

[node name="Save" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Save"

[node name="QuitGame" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Quit Game"

[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/HBoxContainer/CloseMenuButton" to="." method="_on_close_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer2/VBoxContainer/SaveAndLeave" to="." method="_on_save_and_leave_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer2/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer2/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
